--- a/public/front-end/css/main.css
+++ b/public/front-end/css/main.css
@@ -1,10 +1,49 @@
 #sidebar-right {
-	padding-left: 10px;
-	border-left: 1px solid gray;
+	padding-left: 30px;
+	border-left: 1px solid #d3d3d3;
 }
 
 .navbar-inner {
 border-radius: 0px; 
 -moz-border-radius: 0px; 
 -webkit-border-radius: 0px; 
+}
+
+hr {
+	color: #d3d3d3;
+	border-color: #f5f5f5;
+}
+
+.question-score-home p, .question-score-detail p,
+.answer-score-detail p {
+	text-align: center;
+	vertical-align: middle;
+	font-size: 170%;
+	padding-top: 10px;
+	line-height: 20px;
+}
+
+.question-block-home, .question-block-detail,
+.answer-block-detail {
+	border: 1px solid #e5e5e5;
+	padding: 5px 20px;
+	background-color: #f5f5f5;
+	border-radius: 8px; 
+-moz-border-radius: 8px; 
+-webkit-border-radius: 8px; 
+}
+
+.question-block-home:hover, .question-block-detail:hover,
+.answer-block-detail:hover {
+	background-color: #e5e5e5;
+}
+
+.answer-block-detail {
+	padding-top: 20px;
+}
+
+.icon-arrow-up, .icon-arrow-down{
+	display:block; 
+	margin-left: auto;
+	margin-right: auto;
 }
