--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,9 +1,8 @@
-<div class="row-fluid">
-      <div class="span10 offset1" id="content-container">
         <div class="row-fluid">
           <div class="span8" id="questions-home">
             <h2>Popular Questions</h2>
             <hr>
+            <h3><%= link_to "Add new question", new_question_path  %></h3>
             <% @questions.each do |q| %>
             <div class="question-block-home">
               <div class="row-fluid">
@@ -12,7 +11,7 @@
                 </div>
               </div>
               <div class="row-fluid">
-                <div class="span1 question-score-home"><p>2</p></div>
+                <div class="span1 question-score-home"><p><%= q.qscore %></p></div>
                 <div class="span11">      
                   <p>
                     <%= q.description[1...50] %>
@@ -63,5 +62,4 @@
       </div>
 
     </div>
-    </div>
-    </div>
+ 
