--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -46,3 +46,87 @@ By: <%= @question.user.username %>
   <% end %>
 </div>
 </p>
+
+
+            <h3>Question # <%= @question.id %></h3>
+            <div class="question-block-detail">
+              <div class="row-fluid">
+                <div class="span8">
+                  <h4><strong><a href="#"><%= @question.question %></a></strong></h4>
+                </div>
+              </div>
+              <div class="row-fluid">
+                <div class="span1 question-score-detail">
+                  <div class="vote">
+                  <a href="#"><i class="icon-arrow-up"></i></a>
+                  <%= link_to "+", qscore_path(@question), remote: true %>
+                  <p><%= @question.qscore %></p>
+                  <%= link_to "-", qscore_path(@question), remote: true %>
+                  <a href="#"><i class="icon-arrow-down"></i></a>
+                  </div>
+                </div>
+                <div class="span11">      
+                  <p><%= @question.description %></p>
+                </div>
+              </div>
+              <div class="row-fluid">
+                <div class="span11 offset1">
+                  <p></p>
+                  <p>
+                    <i class="icon-user"></i> by <a href="#"><%= @question.user.username %></a> 
+                    | <i class="icon-calendar"></i> Sept 16th, 2012
+                    | <i class="icon-comment"></i> <a href="#"><%= "#{@question.answers.count} Answers" %> </a>
+                    <% if !@question.tag_list.nil? %>| <i class="icon-tags"></i> Tags : <%= @question.tag_list %><% end %>
+                     <a href="#"><span class="label label-info">Snipp</span></a> 
+                  </p>
+                </div>
+              </div>
+            </div>
+            
+            <hr>
+            
+            <h3>Answers</h3>
+            
+
+            <div class="answers">
+            <div class="row-fluid">
+            <div class="span11 offset1">
+            <% @answers.each do |a| %>
+            <div class="answer-block-detail">
+              <div class="row-fluid">
+                <div class="span1 answer-score-detail">
+                  <a href="#"><i class="icon-arrow-up"></i></a>
+                  <%= link_to "+", qscore_path(@question), remote: true %>
+                  <p><%= a.score %></p>
+                  <%= link_to "-", qscore_path(@question), remote: true %>
+                  <a href="#"><i class="icon-arrow-down"></i></a>
+                </div>
+                  <div class="span11">      
+                    <p>
+                      <%= a.answer %>
+                    </p>
+                  </div>
+              </div>
+              <div class="row-fluid">
+                <div class="span11 offset1">
+                  <p></p>
+                  <p>
+                    <i class="icon-user"></i> by <a href="#"><%= a.user.username %></a> 
+                    | <i class="icon-calendar"></i> Sept 16th, 2012
+                  </p>
+                </div>
+              </div>
+            </div>
+            <p style="margin-bottom: 20px;">
+            <% end %>
+            <a href="#" id="answer_the_question">Answer</a>
+            <div id="answer_form">
+            <%= simple_form_for [@question, @answer], remote: true do |f| %>
+              <%= f.input :answer %>
+              <%= f.submit %>
+            <% end %>
+            </div>
+            </div>
+            </div>
+            </div>
+            
