Fix lots of stuff in index and detail

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -75,3 +75,8 @@ hr {
   margin-right: auto;
 }
 
+.controls input, .controls textarea {
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
