--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#" name="top">Musi.QA</a>
+          <a class="brand" href="/" name="top">Musi.QA</a>
           <div class="nav-collapse collapse">
             <form class="navbar-search pull-left">
               <input type="text" class="search-query" placeholder="Search">
