--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,1 +1,7 @@
 <h1>Ask your question</h1>
+
+<%= simple_form_for @question do |f| %>
+	<%= f.input :question %>
+	<%= f.input :description, as: :text %>
+	<%= f.submit %>
+<% end %>
