--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcome <%= @user.username || @user.email %></h1>
 
 <br />
-<%= link_to "Ask a question", new_questions_path %>
+<%= link_to "Ask a question", new_question_path %>
