--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -3,5 +3,6 @@
 <%= simple_form_for @question do |f| %>
 	<%= f.input :question %>
 	<%= f.input :description, as: :text %>
+  <%= f.input :tag_list, label: "Tags, separated by commas" %>
 	<%= f.submit %>
 <% end %>
