--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,12 @@
   <title>Musiqa</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= csrf_meta_tags %>
 </head>
 <body>
 <%= render 'layouts/header' %>
+<%= render 'layouts/messages' %>
 <%= yield %>
 <%= render 'layouts/footer' %>
 </body>
