--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,14 +1,67 @@
-<h1>Welcome to MusiQA</h1><%= ENV['en_api_key'] %>
-<br />
-<% @questions.each do |q| %>
-  <%= "#{q.qscore} -" %> <%= link_to q.question, q  %> <%= "- #{q.user.username}" %>
-  <br /><% if !q.tag_list.nil? %>Tags: <%= q.tag_list %><% end %>
-  <br />
-<% end %>
+<div class="row-fluid">
+      <div class="span10 offset1" id="content-container">
+        <div class="row-fluid">
+          <div class="span8" id="questions-home">
+            <h2>Popular Questions</h2>
+            <hr>
+            <% @questions.each do |q| %>
+            <div class="question-block-home">
+              <div class="row-fluid">
+                <div class="span8">
+                  <h4><strong><%= link_to q.question, q  %></strong></h4>
+                </div>
+              </div>
+              <div class="row-fluid">
+                <div class="span1 question-score-home"><p>2</p></div>
+                <div class="span11">      
+                  <p>
+                    <%= q.description[1...50] %>
+                  </p>
+                  <p><a class="btn" href="#">Read more</a></p>
+                </div>
+              </div>
+              <div class="row-fluid">
+                <div class="span11 offset1">
+                  <p></p>
+                  <p>
+                    <i class="icon-user"></i> by <a href="#"><%= q.user.username %></a> 
+                    | <i class="icon-calendar"></i> Sept 16th, 2012
+                    | <i class="icon-comment"></i> <a href="#"><%= "#{q.answers.count} Answers" %> </a>
+                    <% if !q.tag_list.nil? %>| <i class="icon-tags"></i> Tags : <%= q.tag_list %><% end %>
+                     <a href="#"><span class="label label-info">Snipp</span></a> 
+                  </p>
+                </div>
+              </div>
+            </div>
+            <p style="margin-bottom: 20px;">
+              <% end %>
+            </p>
+            <hr>
+          </div>
+      <div class="span4" id="sidebar-right">
+        <div id="songs-home">
+          <h2>Songs</h2>
+          <hr>
+          <p>John Mayer - Gravity ohn Mayer - Gravityohn Mayer - Gravityohn Mayer - Gravityohn Mayer - Gravityohn Mayer - Gravityohn Mayer - Gravityohn Mayer - Gravityohn Mayer - Gravityohn Mayer - Gravityohn Mayer - Gravityohn Mayer - Gravityohn Mayer - Gravityohn Mayer - Gravityohn Mayer - Gravityohn Mayer - Gravityohn Mayer - Gravity</p>
+          <p>John Mayer - Gravity</p>
+          <p>John Mayer - Gravity</p>
+          <p>John Mayer - Gravity</p>
+          <p>John Mayer - Gravity</p>
+          <p>John Mayer - Gravity</p>
+        </div>
 
-<br />
-<div id="tag_cloud">
-  <% tag_cloud Question.tag_counts, %w[s m l] do |tag| %>
-    <%= tag.name %>
-  <% end %>
-</div>
+        <div id="tags-home">
+          <h2>Tags</h2>
+          <hr>
+          <div id="tag_cloud">
+            <% tag_cloud Question.tag_counts, %w[s m l] do |tag, css_class| %>
+              <%= link_to tag.name, "#", :class => css_class %>
+            <% end %>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+    </div>
+    </div>
